@@ -6,3 +6,5 @@ the addon because I'm too lazy not to include it.
 	* Make split smart enough to notice if it might run out of
 	  slots.
 	* Add convenience stuff like "count empty slots"
+	* Improve slotspec/charspec to allow wildcarding
+
